# TFM

./: .gitignore  .gitmodules  pyproject.toml
artifacts/: README.md
docs/: guidelines.md
docs/results/: custom_metrics_per_video.csv  global_average_rank.csv  metric_correlation_spearman.csv  metric_summary_by_dataset.csv  metrics_per_video.csv  rankings_by_dataset.csv  runtime_per_video.csv  selected_iou_thresholds.csv
notebooks/: 01-dataset-preparation.ipynb  03-testing.ipynb  04-batch-explanations.ipynb  05-bounding-boxes.ipynb  07-metrics-analysis.ipynb
