[project]
name = "tfm-new"
version = "0.1.0"
requires-python = ">=3.9,<3.10"
dependencies = [
    "decord>=0.6.0",
    "einops>=0.8.2",
    "ipykernel>=6.31.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.4",
    "mmaction2",
    "mmcv-full==1.6.0",
    "numpy==1.23.5",
    "opencv-contrib-python==4.9.0.80",
    "pandas==1.5.3",
    "pillow>=11.3.0",
    "scikit-image>=0.24.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "setuptools>=60.2.0",
    "shap>=0.49.1",
    "torch==1.12.1+cu113",
    "torchaudio==0.12.1",
    "torchvision==0.13.1+cu113",
    "tqdm>=4.68.3",
    "wheel>=0.47.0",
]

[tool.uv]
environments = ["sys_platform == 'win32'"]

[tool.uv.sources]
mmaction2 = { path = "mmaction2", editable = true }
"mmcv-full" = { url = "https://download.openmmlab.com/mmcv/dist/cu113/torch1.12.0/mmcv_full-1.6.0-cp39-cp39-win_amd64.whl" }
torch = { index = "pytorch-cu113" }
torchvision = { index = "pytorch-cu113" }
torchaudio = { index = "pytorch-cu113" }

[[tool.uv.index]]
name = "pytorch-cu113"
url = "https://download.pytorch.org/whl/cu113"
explicit = true
